--- a/polybar/config
+++ b/polybar/config
@@ -1,4 +1,4 @@
-;t=====================================================
+;=====================================================
 ;
 ;   To learn more about how to configure Polybar
 ;   go to https://github.com/jaagr/polybar
@@ -9,7 +9,7 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #aa0A0E14
+background = #e20A0E14
 ;#bb010101
 background-alt = #aa252525
 ;foreground = ${xrdb:color7:#222}
@@ -53,8 +53,8 @@ modules-left = i3 xwindow
 modules-center = mpd
 modules-right = xkeyboard wlan temperature battery date
 
-#tray-position = right
-#tray-padding = 2
+;tray-position = right
+;tray-padding = 2
 ;tray-transparent = true
 ;tray-background = #0063ff
 
@@ -76,7 +76,7 @@ cursor-scroll = ns-resize
 type = internal/xwindow
 label = %title:0:30:...%
 format-foreground = #757575
-format-prefix = "  "
+format-prefix = "   "
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -208,11 +208,11 @@ format-prefix-foreground = ${colors.foreground-alt}
 #format-underline = #4bffdc
 label = %percentage_used%%
 
-[module/network]
-type = custom/script
-exec = ~/bin/scripts/check-network
-click-right = ~/bin/scripts/rofi-wifi
-tail = true
+;[module/network]
+;type = custom/script
+;exec = ~/bin/scripts/check-network
+;click-right = ~/bin/scripts/rofi-wifi
+;tail = true
 
 [module/wlan]
 type = internal/network
@@ -231,7 +231,7 @@ ramp-signal-1 = 
 ramp-signal-2 = 
 ramp-signal-3 = 
 ramp-signal-4 = 
-ramp-signal-foreground = #F9AF4F
+ramp-signal-foreground = #90E1C6
 
 [module/eth]
 type = internal/network
@@ -337,8 +337,8 @@ format = <ramp> <label>
 format-warn = <ramp> <label-warn>
 ;format-warn-underline = ${self.format-underline}
 
-label = %temperature%
-label-warn = %temperature%
+label = %temperature-c%
+label-warn = %temperature-c%
 label-warn-foreground = ${colors.secondary}
 
 ramp-0 = 
