--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,7 +23,7 @@ set -g mouse on
 set -g status-position bottom
 set -g status-justify left
 set -g status-left ''
-set-option -g status-bg "#0A0E14"
+set-option -g status-bg default
 set-option -g status-fg white
 
 set -g status-right '%H:%M'
@@ -31,5 +31,8 @@ set -g status-right-length 50
 set -g default-terminal 'screen-256color'
 set -g terminal-overrides 'xterm:colors=256'
 set -ga terminal-overrides ",screen-256color:Tc"
+
 #tmux-resurrect
 run-shell ~/.config/tmux/plugins/tmux-resurrect/resurrect.tmux
+# for neovim
+set -g @resurrect-strategy-nvim 'session'
