--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,10 +11,10 @@ unbind r
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.config/tmux/.tmux.conf
 
-bind -n C-l select-pane -L
-bind -n C-h select-pane -R
-bind -n C-k select-pane -U
-bind -n C-j select-pane -D
+bind  l select-pane -L
+bind  h select-pane -R
+bind  k select-pane -U
+bind  j select-pane -D
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
