Status bar colors

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,10 +23,14 @@ set -g mouse on
 set -g status-position bottom
 set -g status-justify left
 set -g status-left ''
-set-option -g status-bg default
+set-option -g status-bg black
 set-option -g status-fg white
 
-set -g status-right '%H:%M'
+set-window-option -g window-status-current-format '#[fg=colour0,bg=colour3] #I:#W#[fg=dim] '
+set-window-option -g window-status-format '#[fg=colour243] #I:#W#[fg=colour3] #F '
+set -g status-right '#[fg=colour47]#(echo $USER)@#H#[fg=colour243] #[bg=colour240,fg=colour255] %a %h %d #[bg=colour248,fg=colour0]%l:%M %p '
+bind-key C-a last-window
+#set -g status-right '%H:%M'
 set -g status-right-length 50
 set -g default-terminal 'screen-256color'
 set -g terminal-overrides 'xterm:colors=256'
