--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,16 +19,20 @@ bind  j select-pane -D
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
 
+# Fix mode delay
+set -s escape-time 0
+
 # statusbar
 set -g status-position bottom
 set -g status-justify left
 set -g status-left ''
-set-option -g status-bg black
+set-option -g status-bg colour16
 set-option -g status-fg white
 
-set-window-option -g window-status-current-format '#[fg=colour0,bg=colour3] #I:#W#[fg=dim] '
-set-window-option -g window-status-format '#[fg=colour243] #I:#W#[fg=colour3] #F '
-set -g status-right '#[fg=colour47]#(echo $USER)@#H#[fg=colour243] #[bg=colour240,fg=colour255] %a %h %d #[bg=colour248,fg=colour0]%l:%M %p '
+set-window-option -g window-status-current-format '#[fg=colour3,bold] #I #W#[fg=dim] '
+set-window-option -g window-status-format '#[fg=colour243] #I #W#[fg=colour3]#F '
+set -g status-left '#[fg=colour12,bold] ● #S '
+set -g status-right '#[fg=colour43,bold]@#H #[fg=colour248,nobold] %a %d %h #[fg=colour248]%l:%M %p '
 bind-key C-a last-window
 #set -g status-right '%H:%M'
 set -g status-right-length 50
