--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,10 +11,10 @@ unbind r
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.config/tmux/.tmux.conf
 
-bind  l select-pane -L
-bind  h select-pane -R
-bind  k select-pane -U
-bind  j select-pane -D
+bind l select-pane -L
+bind h select-pane -R
+bind k select-pane -U
+bind j select-pane -D
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
@@ -26,13 +26,15 @@ set -s escape-time 0
 set -g status-position bottom
 set -g status-justify left
 set -g status-left ''
-set-option -g status-bg colour16
-set-option -g status-fg white
+set-option -g status-bg "#000000"
+set-option -g status-fg "#ffffff"
+set -g pane-border-style "fg=#282c34"
+set -g pane-active-border-style "bg=#282c34 fg=default"
 
-set-window-option -g window-status-current-format '#[fg=colour3,bold] #I #W#[fg=dim] '
-set-window-option -g window-status-format '#[fg=colour243] #I #W#[fg=colour3]#F '
-set -g status-left '#[fg=colour12,bold] ● #S '
-set -g status-right '#[fg=colour43,bold]@#H #[fg=colour248,nobold] %a %d %h #[fg=colour248]%l:%M %p '
+set-window-option -g window-status-current-format '#[fg=#d8dee9,bold] #I #W'
+set-window-option -g window-status-format '#[fg=#707a8c] #I #W#[fg=#d8dee9]#F'
+set -g status-left '#[fg=#c594c5,bold] #S ● '
+set -g status-right '#[fg=#ffcc66,bold]@#H #[fg=#c0c5cE,nobold] %a %d %h -%l:%M %p '
 bind-key C-a last-window
 #set -g status-right '%H:%M'
 set -g status-right-length 50
@@ -42,5 +44,7 @@ set -ga terminal-overrides ",screen-256color:Tc"
 
 #tmux-resurrect
 run-shell ~/.config/tmux/plugins/tmux-resurrect/resurrect.tmux
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+set -g focus-events on
 # for neovim
 set -g @resurrect-strategy-nvim 'session'
