--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,50 +1,45 @@
-# remap prefix from 'C-b' to 'C-a'
+# Keybinds
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
-
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
 unbind '"'
 unbind r
-# reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.config/tmux/.tmux.conf
+set-option -g prefix C-a
+bind-key C-a send-prefix
+bind-key C-a last-window
 
+bind | split-window -h
+bind - split-window -v
+bind r source-file ~/.config/tmux/.tmux.conf
 bind l select-pane -L
 bind h select-pane -R
 bind k select-pane -U
 bind j select-pane -D
 
-# Enable mouse mode (tmux 2.1 and above)
+# Settings
 set -g mouse on
-
-# Fix mode delay
 set -s escape-time 0
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ',screen-256color:Tc'
+set -ga terminal-overrides ",alacritty:Tc"
+set -g focus-events on
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
-# statusbar
+# Statusbar
 set -g status-position bottom
 set -g status-justify left
 set -g status-left ''
-set-option -g status-bg "#000000"
+set-option -g status-bg "#0a0c0e"
 set-option -g status-fg "#ffffff"
 set -g pane-border-style "fg=#282c34"
-set -g pane-active-border-style "bg=#282c34 fg=default"
+set -g pane-active-border-style "bg=default fg=#282c34"
 
 set-window-option -g window-status-current-format '#[fg=#d8dee9,bold] #I #W'
 set-window-option -g window-status-format '#[fg=#707a8c] #I #W#[fg=#d8dee9]#F'
-set -g status-left '#[fg=#c594c5,bold] #S ● '
-set -g status-right '#[fg=#ffcc66,bold]@#H #[fg=#c0c5cE,nobold] %a %d %h -%l:%M %p '
-bind-key C-a last-window
-#set -g status-right '%H:%M'
-set -g status-right-length 50
-set -g default-terminal 'screen-256color'
-set -g terminal-overrides 'xterm:colors=256'
-set -ga terminal-overrides ",screen-256color:Tc"
 
-#tmux-resurrect
+set -g status-left '#[fg=#EA6C73,bold] #S  '
+set -g status-right '#[fg=#c594c5,bold]#(tmux-spotify both) #[fg=#ffcc66,bold] @#H #[fg=#686868]%a %d %h#[fg=#b3b1ad] %l:%M %p '
+set -g status-right-length 100
+
+# tmux-resurrect
 run-shell ~/.config/tmux/plugins/tmux-resurrect/resurrect.tmux
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-set -g focus-events on
 # for neovim
 set -g @resurrect-strategy-nvim 'session'
