--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,6 +20,7 @@ set -s escape-time 0
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ',screen-256color:Tc'
 set -ga terminal-overrides ",alacritty:Tc"
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 set -g focus-events on
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
