Added updated configs

--- a/alacritty.yml
+++ b/alacritty.yml
@@ -105,15 +105,15 @@ font:
     #style: Regular
 
   # Italic font face
-  #italic:
+  italic:
     # Font family
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    #family: monospace
+    family: Source Code Pro for Powerline
 
     # The `style` can be specified to pick a specific face.
-    #style: Italic
+    style: Italic
 
   # Point size 10.5
   size: 10
@@ -178,7 +178,8 @@ debug:
 colors:
   # Default colors
   primary:
-    background: '0x0A0C0E'
+    #background: '0x0A0C0E'
+    backgroubd: '0x000000'
     foreground: '0xB3B1AD'
 
   # Normal colors
