--- a/i3/config
+++ b/i3/config
@@ -213,8 +213,8 @@ bindsym Mod1+F8 exec ~/bin/scripts/prtsc.sh
 bindsym Mod1+F10 exec ~/bin/scripts/monitor_layout.sh
 bindsym Mod1+F12 exec ~/bin/scripts/rofi-power.sh
 # browser
-bindsym Mod1+w exec chromium
-bindsym Mod1+Shift+w exec chromium --incognito
+bindsym Mod1+w exec google-chrome-stable
+bindsym Mod1+Shift+w exec google-chrome-stable --incognito
 # lockscreen
 bindsym Mod1+F9 exec betterlockscreen -l dimblur
 bindsym Mod1+r exec thunar
