--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,10 +28,10 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 set -g status-position bottom
 set -g status-justify left
 set -g status-left ''
-set-option -g status-bg "#0a0c0e"
+set-option -g status-bg "#000000"
 set-option -g status-fg "#ffffff"
-set -g pane-border-style "fg=#282c34"
-set -g pane-active-border-style "bg=default fg=#282c34"
+set -g pane-border-style "fg=#1c1c1c"
+set -g pane-active-border-style "bg=default fg=#1c1c1c"
 
 set-window-option -g window-status-current-format '#[fg=#d8dee9,bold] #I #W'
 set-window-option -g window-status-format '#[fg=#707a8c] #I #W#[fg=#d8dee9]#F'
@@ -40,7 +40,7 @@ set -g status-left '#[fg=#EA6C73,bold] #S  '
 set -g status-right '#[fg=#c594c5,bold]#(tmux-spotify both) #[fg=#ffcc66,bold] @#H #[fg=#686868]%a %d %h#[fg=#b3b1ad] %l:%M %p '
 set -g status-right-length 100
 
-# tmux-resurrect
-run-shell ~/.config/tmux/plugins/tmux-resurrect/resurrect.tmux
-# for neovim
-set -g @resurrect-strategy-nvim 'session'
+# # tmux-resurrect
+# run-shell ~/.config/tmux/plugins/tmux-resurrect/resurrect.tmux
+# # for neovim
+# set -g @resurrect-strategy-nvim 'session'
