--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,10 +30,10 @@ set -g status-justify left
 set -g status-left ''
 set-option -g status-bg "#000000"
 set-option -g status-fg "#ffffff"
-set -g pane-border-style "fg=#1c1c1c"
-set -g pane-active-border-style "bg=default fg=#1c1c1c"
+set -g pane-border-style "fg=#1c1c1c,"
+set -g pane-active-border-style "bg=default fg=#707a8c"
 
-set-window-option -g window-status-current-format '#[fg=#d8dee9,bold] #I #W'
+set-window-option -g window-status-current-format '#[fg=#d8dee9,bold] #{?window_zoomed_flag,#[fg=#ffcc66],}#I #W'
 set-window-option -g window-status-format '#[fg=#707a8c] #I #W#[fg=#d8dee9]#F'
 
 set -g status-left '#[fg=#EA6C73,bold] #S  '
