--- a/i3/config
+++ b/i3/config
@@ -13,11 +13,12 @@
 # is used in the bar {} block below.
 #exec --no-startup-id ~/bin/scripts/set_monitors &
 font pango: Noto Sans 10
-client.focused          #dddddd #dddddd #dddddd #dddddd   #dddddd
-client.focused_inactive #252525 #252525 #252525 #252525   #252525
-client.unfocused        #333333 #222222 #888888 #292d2e   #222222
-client.urgent           #2f343a #900000 #ffffff #900000   #900000
-client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+# class                 #Border #Backgr #Text   #Indicator #child_border
+client.focused          #202124 #202124 #a0a0a0 #d1d1d1    #1c1c1c
+client.focused_inactive #252525 #252525 #252525 #252525    #222222
+client.unfocused        #111111 #111111 #444444 #292d2e
+client.urgent           #bd2c40 #bd2c40 #d1d1d1 #900000
+client.placeholder      #000000 #0c0c0c #ffffff #000000
 
 client.background       #ffffff
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
@@ -33,12 +34,14 @@ set $text-color #33b2b2
 # font, it doesn’t scale on retina/hidpi displays.
 for_window [class="^.*"] border pixel 0
 for_window [instance="border"] border pixel 0
+for_window [class=".*"] title_format "  %title"
 floating_maximum_size -1 x 900
 # set
 smart_gaps on
 gaps inner 8
 gaps outer 0
 set $term alacritty --config-file ~/.config/alacritty/alacritty.yml
+workspace_layout tabbed
 #workspace $space1 gaps inner 0
 #workspace $space1 gaps outer 0
 #workspace $space2 gaps inner 0
@@ -102,9 +105,9 @@ bindsym Mod1+v split v
 bindsym Mod1+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-#bindsym Mod1+s layout stacking
-#bindsym Mod1+s layout toggle tabbed
-#bindsym Mod1+e layout toggle split
+
+bindsym Mod1+F1 layout toggle splith tabbed
+bindsym Mod1+a layout toggle split
 
 # toggle tiling / floating
 bindsym Mod1+Shift+space floating toggle
@@ -113,7 +116,7 @@ bindsym Mod1+Shift+space floating toggle
 bindsym Mod1+space focus mode_toggle
 
 # focus the parent container
-bindsym Mod1+a focus parent
+#bindsym Mod1+a focus parent
 
 # focus the child container
 #bindsym Mod1+d focus child
@@ -213,6 +216,7 @@ bindsym Mod1+F7 exec ~/bin/rofi-wifi-menu/rofi-wifi-menu.sh
 bindsym Mod1+F8 exec ~/bin/scripts/prtsc.sh
 bindsym Mod1+F10 exec ~/bin/scripts/monitor_layout.sh
 bindsym Mod1+F12 exec ~/bin/scripts/rofi-power.sh
+bindsym Mod1+grave exec ~/bin/scripts/dmenuunicode.sh
 # browser
 bindsym Mod1+w exec $browser
 bindsym Mod1+Shift+w exec $browser --incognito
@@ -235,7 +239,7 @@ exec_always ~/.fehbg &
 exec_always ~/bin/scripts/set_monitors &
 exec_always ~/.config/polybar/launch.sh &
 exec --no-startup-id picom --config ~/.config/picom/picom.conf &
-exec_always --no-startup-id flashfocus &
+#exec_always --no-startup-id flashfocus &
 exec --no-startup-id nm-applet &
 exec --no-startup-id pa-applet &
 exec --no-startup-id xfce4-power-manager &
