--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -44,7 +44,7 @@ opacity-rule = [
 # opacity-rule = [ "80:class_g = 'URxvt'" ];
 
 # Fading
-fading = true;
+#fading = true;
 fade-delta = 30;
 fade-in-step = 0.25
 fade-out-step = 0.25;
@@ -59,7 +59,7 @@ mark-ovredir-focused = true;
 # use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 0;
+refresh-rate = 60;
 vsync = true;
 # sw-opti = true;
 # unredir-if-possible = true;
