--- a/polybar/config
+++ b/polybar/config
@@ -9,7 +9,8 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #e2000000
+;background = #e2000000
+background = #000000
 ;#bb010101
 background-alt = #aa252525
 ;foreground = ${xrdb:color7:#222}
@@ -47,6 +48,7 @@ module-margin-right = 2
 font-1 = Siji:pixelsize=10
 font-0 = Noto Sans:size=10:antialias=true;
 font-3 = Noto Sans:size=10:antialias=ture:weight=bold;
+font-4 = JoyPixels:pixelsize=1
 ;font-1 = Font Awesome 5 Free Solid:pixelsize=10
 font-2 = Material Icons:pixelsize=10
 dpi = 96
