--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,7 +28,7 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 set -g status-position bottom
 set -g status-justify left
 set -g status-left ''
-set-option -g status-bg "#000000"
+set-option -g status-bg "default"
 set-option -g status-fg "#ffffff"
 set -g pane-border-style "fg=#252525"
 set -g pane-active-border-style "bg=default fg=#685958"
