--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,6 @@ unbind '"'
 unbind r
 set-option -g prefix C-a
 bind-key C-a send-prefix
-bind-key C-a last-window
 
 bind | split-window -h
 bind - split-window -v
@@ -13,6 +12,9 @@ bind l select-pane -L
 bind h select-pane -R
 bind k select-pane -U
 bind j select-pane -D
+
+bind -n M-Tab last-window
+set -g status-keys vi
 
 # Settings
 set -g mouse on
@@ -33,12 +35,15 @@ set-option -g status-fg "#ffffff"
 set -g pane-border-style "fg=#252525"
 set -g pane-active-border-style "bg=default fg=#685958"
 
-set-window-option -g window-status-current-format '#[fg=#d8dee9,bold] #{?window_zoomed_flag,#[fg=#ffcc66],}#I #W'
-set-window-option -g window-status-format '#[fg=#707a8c] #I #W#[fg=#d8dee9]#F'
+set-window-option -g window-status-current-format '#[fg=magenta,bold]#{?window_zoomed_flag,#[fg=black]#[bg=magenta],} #I #W '
+set-window-option -g window-status-format '#[fg=#c9c8c5] #I #W#[fg=yellow]#F'
 
-set -g status-left '#[fg=#EA6C73,bold] #S  '
-set -g status-right '#[fg=#c594c5,bold]#(tmux-spotify both) #[fg=#ffcc66,bold] @#H #[fg=#686868]%a %d %h#[fg=#b3b1ad] %l:%M %p '
+set -g status-left '#[fg=red, bg=default, bold] #S ●#[fg=red, bg=default]  ' #
+
+
+set -g status-right '#[fg=#c594c5]#(tmux-spotify both)  #[fg=#686868]｢#[fg=magenta]#H#[fg=#686868]｣ #[fg=#686869]%a %d %h#[fg=#b3b1ad]%l:%M %p '
 set -g status-right-length 100
+set -g status-left-length 100
 
 # # tmux-resurrect
 # run-shell ~/.config/tmux/plugins/tmux-resurrect/resurrect.tmux
