--- a/alacritty.yml
+++ b/alacritty.yml
@@ -27,12 +27,13 @@ window:
   #
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
+
   padding:
-    x: 0
-    y: 0
+    x: 5
+    y: 5
 
   # Spread additional padding evenly around the terminal content.
-  dynamic_padding: false
+  dynamic_padding: true
 
   # Window decorations
   #
@@ -81,15 +82,15 @@ font:
     family: Source Code Pro for Powerline
 
     # The `style` can be specified to pick a specific face.
-    style: Normal
+    style: Regular
 
   # Bold font face
-  #bold:
+  bold:
     # Font family
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    #family: Source Code Pro
+    family: Source Code Pro for Powerline
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -100,7 +101,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Source Code Pro for Powerline
+    # family: Iosevka Term SS09
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -238,7 +239,7 @@ colors:
 #   - Linear
 #
 # Specifying a `duration` of `0` will disable the visual bell.
-visual_bell:
+bell:
   animation: EaseOutExpo
   duration: 0
   color: '0xffffff'
@@ -247,7 +248,7 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1
+background_opacity: 0.95
 
 # Mouse bindings
 #
@@ -306,7 +307,7 @@ selection:
   save_to_clipboard: true
 
 # Allow terminal applications to change Alacritty's window title.
-dynamic_title: true
+window.dynamic_title: true
 
 cursor:
   # Cursor style
