--- a/i3/config
+++ b/i3/config
@@ -37,9 +37,10 @@ for_window [instance="border"] border pixel 0
 for_window [class=".*"] title_format "  %title"
 floating_maximum_size -1 x 900
 # set
-smart_gaps on
+#smart_gaps on
 gaps inner 8
 gaps outer 0
+gaps top 20
 set $term alacritty --config-file ~/.config/alacritty/alacritty.yml
 workspace_layout tabbed
 #workspace $space1 gaps inner 0
@@ -128,6 +129,11 @@ bindsym Mod1+Shift+minus move scratchpad
 # If there are multiple scratchpad windows, this command cycles through them.
 bindsym Mod1+minus scratchpad show
 
+# Set Music Player
+set $music "spotify"
+set $musicscript "~/bin/scripts/dropspot.sh"
+set $browser chromium
+
 # Dropdown Terminal
 for_window [instance="dropdown"] floating enable
 for_window [instance="dropdown"] resize set 1920 400
@@ -142,42 +148,29 @@ for_window [instance=$music] move position center
 for_window [instance=$music] move scratchpad
 for_window [instance=$music] border pixel 1
 
-# Set Music Player
-set $music "spotify"
-set $musicscript "~/bin/scripts/dropspot.sh"
-set $browser chromium
-
-# Ws mappings
-set $space1 "1"
-set $space2 "2"
-set $space3 "3"
-set $space4 "4"
-set $space5 "5"
-set $space6 "6"
-
 # switch to workspace
-bindsym Mod1+1 workspace $space1
-bindsym Mod1+2 workspace $space2
-bindsym Mod1+3 workspace $space3
-bindsym Mod1+4 workspace $space4
-bindsym Mod1+5 workspace $space5
-bindsym Mod1+6 workspace $space6
-bindsym Mod1+7 workspace 7
-bindsym Mod1+8 workspace 8
-bindsym Mod1+9 workspace 9
-bindsym Mod1+0 workspace 10
+bindsym Mod1+1 workspace number 1
+bindsym Mod1+2 workspace number 2
+bindsym Mod1+3 workspace number 3
+bindsym Mod1+4 workspace number 4
+bindsym Mod1+5 workspace number 5
+bindsym Mod1+6 workspace number 6
+bindsym Mod1+7 workspace number 7
+bindsym Mod1+8 workspace number 8
+bindsym Mod1+9 workspace number 9
+bindsym Mod1+0 workspace number 10
 
 # move focused container to workspace
-bindsym Mod1+Shift+1 move container to workspace $space1
-bindsym Mod1+Shift+2 move container to workspace $space2
-bindsym Mod1+Shift+3 move container to workspace $space3
-bindsym Mod1+Shift+4 move container to workspace $space4
-bindsym Mod1+Shift+5 move container to workspace $space5
-bindsym Mod1+Shift+6 move container to workspace $space6
-bindsym Mod1+Shift+7 move container to workspace 7
-bindsym Mod1+Shift+8 move container to workspace 8
-bindsym Mod1+Shift+9 move container to workspace 9
-bindsym Mod1+Shift+0 move container to workspace 10
+bindsym Mod1+Shift+1 move container to workspace number 1
+bindsym Mod1+Shift+2 move container to workspace number 2
+bindsym Mod1+Shift+3 move container to workspace number 3
+bindsym Mod1+Shift+4 move container to workspace number 4
+bindsym Mod1+Shift+5 move container to workspace number 5
+bindsym Mod1+Shift+6 move container to workspace number 6
+bindsym Mod1+Shift+7 move container to workspace number 7
+bindsym Mod1+Shift+8 move container to workspace number 8
+bindsym Mod1+Shift+9 move container to workspace number 9
+bindsym Mod1+Shift+0 move container to workspace number 10
 
 
 # Assign VSCode to ws2
