--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -61,6 +61,7 @@ detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 60;
 vsync = true;
+# corner-radius = 15;
 # sw-opti = true;
 # unredir-if-possible = true;
 # unredir-if-possible-delay = 5000;
