--- a/polybar/config
+++ b/polybar/config
@@ -10,51 +10,80 @@
 [colors]
 ;background = ${xrdb:color0:#222}
 ;background = #e2000000
-background = #000000
+background = #df080707
 ;#bb010101
 background-alt = #aa252525
 ;foreground = ${xrdb:color7:#222}
-foreground = #c7c7c7
+foreground = #a9a8a2
 foreground-alt = #b3b1ad
-primary = #B3B1AD
+primary = #c7c7c7
 secondary = #e60053
 alert = #bd2c40
+[bar/bar2]
+monitor = ${env:MONITOR:}
+width = 19%
+height = 22
+background = ${colors.background}
+foreground = ${colors.foreground}
+offset-x = 81%:-8
+offset-y = 3
+override-redirect=true
+radius = 6.0
+fixed-center = true
+font-0 = IBM Plex Sans:size=10:antialias=true;2
+font-1 = Siji:pixelsize=10;1
+font-2 = JoyPixels:pixelsize=1;1
+font-3 = IBM Plex Sans:size=10:antialias=ture:weight=SemiBold;2
+font-4 = Weather Icons:pixelsize=9:antialias=true;2
+dpi = 96
+modules-left =
+modules-center =
+modules-right = xkeyboard d weather d volume temperature wlan battery date
+padding-left = 0
+padding-right = 5
+
+module-margin-left = 1
+module-margin-right = 1
+wm-restack=i3
+
+cursor-click = pointer
+cursor-scroll = ns-resize
 
 [bar/bar1]
 monitor = ${env:MONITOR:}
-width = 100%
-height = 20
-;offset-x = 1%
-;offset-y = -1%
-;radius = 6.0
+width = 19%
+height = 22
+offset-x = 8
+offset-y = 3
+override-redirect=true
+radius = 6.0
 fixed-center = true
-separator = %{F#757575}%{F-}
+; separator = %{F#757575}|%{F-}
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3
+line-size = 2
 line-color = #f00
 
 border-size = 0
 border-color = #000000
 
-padding-left = 0
-padding-right = 2
+padding-left = 3
+padding-right = 0
 
-module-margin-left = 2
-module-margin-right = 2
+module-margin-left = 1
+module-margin-right = 1
 
-font-1 = Siji:pixelsize=10
-font-0 = Noto Sans:size=10:antialias=true;
-font-3 = Noto Sans:size=10:antialias=ture:weight=bold;
-font-4 = JoyPixels:pixelsize=1
-;font-1 = Font Awesome 5 Free Solid:pixelsize=10
-font-2 = Material Icons:pixelsize=10
+font-0 = IBM Plex Sans:size=10:antialias=true;2
+font-1 = Siji:pixelsize=10;1
+font-2 = JoyPixels:pixelsize=1;1
+font-3 = IBM Plex Sans:size=10:antialias=ture:weight=SemiBold;2
+; font-2 = Material Icons:pixelsize=10
 dpi = 96
 modules-left = i3 xwindow
-modules-center = mpd
-modules-right = xkeyboard wlan temperature battery date
+modules-center =
+modules-right =
 
 ;tray-position = right
 ;tray-padding = 2
@@ -79,7 +108,7 @@ cursor-scroll = ns-resize
 type = internal/xwindow
 label = %title:0:30:...%
 format-foreground = #757575
-format-prefix = "   "
+format-prefix = "%{F#4d4d4d}%{F-}  "
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -107,24 +136,24 @@ label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 
-[module/bspwm]
-type = internal/bspwm
+; [module/bspwm]
+; type = internal/bspwm
 
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
-label-focused-padding = 2
+; label-focused = %index%
+; label-focused-background = ${colors.background-alt}
+; label-focused-underline= ${colors.primary}
+; label-focused-padding = 2
 
-label-occupied = %index%
-label-occupied-padding = 2
+; label-occupied = %index%
+; label-occupied-padding = 2
 
-label-urgent = %index%!
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+; label-urgent = %index%!
+; label-urgent-background = ${colors.alert}
+; label-urgent-padding = 2
 
-label-empty = %index%
-label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
+; label-empty = %index%
+; label-empty-foreground = ${colors.foreground-alt}
+; label-empty-padding = 2
 
 [module/i3]
 type = internal/i3
@@ -139,39 +168,49 @@ label-mode-padding = 4
 label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
+; ws-icon-0 = 1;
+; ws-icon-1 = 2;
+; ws-icon-2 = 3;
+; ws-icon-3 = 4;
+; ws-icon-4 = 5;
+; ws-icon-5 = 6;
+; ws-icon-default = ♟
+
 ; focused = Active workspace on focused monitor
-label-focused = %{T4}%index%
+label-focused = %name%
 label-focused-background = ${colors.background}
-label-focused-underline = #C7C7C7
+label-focused-foreground = ${colors.primary}
+label-focused-underline = ${colors.foreground}
 label-focused-padding = 3
+label-focused-font = 4
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
+label-unfocused = %name%
 label-unfocused-padding = 3
 
 ; visible = Active workspace on unfocused monitor
-label-visible = %index%
+label-visible = %name%
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = 3
 
 ; urgent = Workspace with urgency hint set
-label-urgent = %index%
-label-urgent-background = ${module/bspwm.label-urgent-background}
+label-urgent = %name%
+label-urgent-background = ${colors.alert}
 label-urgent-padding = 3
 
-[module/mpd]
-type = internal/mpd
-format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
+; [module/mpd]
+; type = internal/mpd
+; format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
 
-icon-prev = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
+; icon-prev = 
+; icon-stop = 
+; icon-play = 
+; icon-pause = 
+; icon-next = 
 
-label-song-maxlen = 25
-label-song-ellipsis = true
+; label-song-maxlen = 25
+; label-song-ellipsis = true
 
 [module/xbacklight]
 type = internal/xbacklight
@@ -222,12 +261,13 @@ type = internal/network
 interface = wlp2s0
 interval = 3.0
 
-format-connected = <ramp-signal> <label-connected>
+format-connected = %{A1:~/bin/scripts/rofi-wifi &:}%{A3:nm-connection-editor:}<ramp-signal>%{A}%{A}
 ;format-connected-underline = #9f78e1
 label-connected = %essid%
-format-disconnected = <label-disconnected>
+format-disconnected = %{A1:~/bin/scripts/rofi-wifi:}%{A3:nm-connection-editor:}<label-disconnected>%{A}%{A}
 ;format-disconnected-underline = ${self.format-connected-underline}
-label-disconnected = 
+label-disconnected = 
+format-disconnected-foreground = ${colors.alert}
 ;label-disconnected-foreground = ${colors.foreground-alt}
 ramp-signal-0 = 
 ramp-signal-1 = 
@@ -255,12 +295,12 @@ label-disconnected = %ifname% disconnected
 [module/date]
 type = internal/date
 interval = 5
-
+; 
 date =
-date-alt = %{T4}%d/%m/%y
+date-alt = %{F#737373} %{F-} %{T4}%d/%m/%y
 
-time = %{T4}%a %I:%M %p
-;time-alt = %H:%M:%S
+time =  %{T4}%a %{F#686868}%{F#} %I:%M %p
+;time-alt = %H:%M:%S %{F#F9AF4F}%{F#}%{F#C594C5}
 
 format-prefix-foreground = ${colors.foreground-alt}
 ;format-underline = #0a6cf5
@@ -268,32 +308,45 @@ format-prefix-foreground = ${colors.foreground-alt}
 label = %date% %time%
 
 [module/volume]
-type = internal/volume
+type = internal/alsa
 
-format-volume = <label-volume> <bar-volume>
-label-volume =
+format-volume = %{A3:pavucontrol:}<ramp-volume>%{A}
+;format-volume = <ramp-volume> <label-volume>
+; format-volume-prefix = " "
+format-volume-prefix-foreground = #FFB454
+label-volume = %percentage%%
 label-volume-foreground = ${root.foreground}
 
-format-muted-prefix = " "
-format-muted-foreground = ${colors.foreground-alt}
-label-muted = sound muted
+; format-muted-prefix = ""
+label-muted = ""
+; format-muted-foreground = #737373
+format-muted-foreground = #945605
+; label-muted = sound muted
 
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = true
-bar-volume-indicator = |
-bar-volume-indicator-font = 2
-bar-volume-fill = =
-bar-volume-fill-font = 2
-bar-volume-empty = -
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
+; bar-volume-width = 10
+; bar-volume-foreground-0 = #55aa55
+; bar-volume-foreground-1 = #55aa55
+; bar-volume-foreground-2 = #55aa55
+; bar-volume-foreground-3 = #55aa55
+; bar-volume-foreground-4 = #55aa55
+; bar-volume-foreground-5 = #55aa55
+; bar-volume-foreground-6 = #55aa55
+; bar-volume-gradient = true
+; bar-volume-indicator =
+; bar-volume-indicator-font = 2
+; bar-volume-fill = %{T6}━%{T-}
+; bar-volume-fill-font = 2
+; bar-volume-empty = %{T6}━%{T-}
+; bar-volume-empty-font = 2
+; bar-volume-empty-foreground = #283419
+
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ramp-volume-3 = 
+ramp-volume-4 = 
+ramp-volume-5 = 
+ramp-volume-foreground = #FFB454
 
 [module/battery]
 type = internal/battery
@@ -301,30 +354,29 @@ battery = BAT1
 adapter = ACAD
 full-at = 98
 
-format-charging = <animation-charging> <label-charging>
-;format-charging-underline = #91B362
+format-charging = %{A3:xfce4-power-manager-settings:}<animation-charging> <label-charging>%{A}
+; format-charging-underline = #91B362
 
-format-discharging = <ramp-capacity> <label-discharging>
+format-discharging = %{A3:xfce4-power-manager-settings:} <ramp-capacity> <label-discharging>%{A}
 ;format-discharging-underline = #F9AF4F
-format-full-prefix = " "
-format-full-prefix-foreground = #C2D94C
+label-full = "%{A3:xfce4-power-manager-settings:}%{F#516732}%{F#C2D94C}   %{F-}%{A}"
+; format-full-prefix-foreground = #C2D94C
 ;format-full-underline = ${self.format-charging-underline}
-;format-charging-prefix = ""
+format-charging-prefix = ""
+format-charging-prefix-foreground = #516732
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-ramp-capacity-5 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 ramp-capacity-foreground = #FFB454
 
 
 animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-5 = 
+animation-charging-3 = 
+animation-charging-4 = 
 
 
 animation-charging-foreground = #91B362
@@ -333,16 +385,17 @@ animation-charging-framerate = 750
 [module/temperature]
 type = internal/temperature
 thermal-zone = 0
-warn-temperature = 60
+warn-temperature = 47
 
-format = <ramp> <label>
+format = %{A1:notify-send " CPU" $(sensors | grep temp1 | cut -d '+' -f 2 | tail -1):}<ramp>%{A}
+
 ;format-underline = ${colors.background}
 format-warn = <ramp> <label-warn>
-;format-warn-underline = ${self.format-underline}
+format-warn-underline = #F07178
 
 label = %temperature-c%
 label-warn = %temperature-c%
-label-warn-foreground = ${colors.secondary}
+; label-warn-foreground = ${colors.secondary}
 
 ramp-0 = 
 ramp-1 = 
@@ -377,7 +430,28 @@ screenchange-reload = true
 ;compositing-border = over
 
 [global/wm]
-margin-top = 5
+margin-top = 10
 margin-bottom = 5
+
+[module/d]
+type = custom/text
+content = " "
+content-foreground = #3d3d3d
+
+[module/weather]
+type = custom/script
+exec = ~/bin/scripts/openweathermap.sh
+interval = 900
+label-font = 5
+format-label-foreground = ${colors.foreground}
+
+[module/spotify]
+type = custom/script
+exec = ~/bin/scripts/tmux-spotify both
+format = <label>
+format-prefix = %{F#C594C5}%{T2}%{T-}%{F-}
+format-prefix-padding = 1
+label-font = 1
+
 
 ; vim:ft=dosini
