--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,11 @@ bind l select-pane -L
 bind h select-pane -R
 bind k select-pane -U
 bind j select-pane -D
+bind -n M-o select-pane -t :.+
+bind -n M-[ copy-mode
+bind -n M-] paste
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 bind -n M-Tab last-window
 set -g status-keys vi
@@ -41,7 +46,7 @@ set-window-option -g window-status-format '#[fg=#c9c8c5] #I #W#[fg=yellow]#F'
 set -g status-left '#[fg=red, bg=default, bold] #S ●#[fg=red, bg=default]  ' #
 
 
-set -g status-right '#[fg=#c594c5]#(tmux-spotify both)  #[fg=#686868]｢#[fg=magenta]#H#[fg=#686868]｣ #[fg=#686869]%a %d %h#[fg=#b3b1ad]%l:%M %p '
+set -g status-right '#[fg=#c594c5]#(tmux-spotify both)  #[fg=#686868]｢#[fg=magenta]#H#[fg=#686868]｣ #[fg=#686869]%a %d %h #[fg=#b3b1ad]%l:%M %p '
 set -g status-right-length 100
 set -g status-left-length 100
 
