--- a/newsboat/config
+++ b/newsboat/config
@@ -27,7 +27,7 @@ save-path "~/Documents/archived-rss"
 browser linkhandler
 macro , open-in-browser
 #macro a set browser "mpv youtube-dl --add-metadata -xic -f bestaudio/best"; open-in-browser ; set browser linkhandler
-macro y set browser "setsid -f mpv"; open-in-browser ; set browser linkhandler
+macro y set browser "setsid -f mpv -quiet %u >/dev/null 2>&1"; open-in-browser ; set browser linkhandler
 macro w set browser "chromium"; open-in-browser ; set browser linkhandler
 
 # Colors
