--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,8 +1,9 @@
-# Shadow
+#experimental-backends = true
+# shadow
 shadow = false;
 shadow-radius = 7;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
+shadow-offset-x = -6;
+shadow-offset-y = -5;
 log-level = "warn";
 # log-file = "/path/to/your/log/file";
 # shadow-opacity = 0.7;
@@ -10,12 +11,12 @@ log-level = "warn";
 # shadow-green = 0.0;
 # shadow-blue = 0.0;
 shadow-exclude = [
-	"name = 'Notification'",
-	"class_g = 'Conky'",
-	"class_g ?= 'Notify-osd'",
-	"class_g = 'Cairo-clock'",
-	"_GTK_FRAME_EXTENTS@:c",
-	"name = 'polybar'"
+  "name = 'Notification'",
+  "class_g = 'Conky'",
+  "class_g ?= 'Notify-osd'",
+  "class_g = 'Cairo-clock'",
+  "_GTK_FRAME_EXTENTS@:c",
+  "name = 'polybar'"
 ];
 # shadow-exclude = "n:e:Notification";
 # shadow-exclude-reg = "x10+0+0";
@@ -34,9 +35,9 @@ inactive-opacity-override = false;
 # blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 # blur-background-fixed = true;
 blur-background-exclude = [
-	"window_type = 'dock'",
-	"window_type = 'desktop'",
-	"_GTK_FRAME_EXTENTS@:c"
+  "window_type = 'dock'",
+  "window_type = 'desktop'",
+  "_GTK_FRAME_EXTENTS@:c"
 ];
 opacity-rule = [
   "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
@@ -53,11 +54,11 @@ fade-out-step = 0.25;
 fade-exclude = [ ];
 
 # Other
-backend = "xrender";
-mark-wmwin-focused = true;
-mark-ovredir-focused = true;
+backend = "glx";
+# mark-wmwin-focused = true;
+# mark-ovredir-focused = true;
 # use-ewmh-active-win = true;
-detect-rounded-corners = true;
+ detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 60;
 vsync = true;
@@ -66,7 +67,7 @@ vsync = true;
 # unredir-if-possible = true;
 # unredir-if-possible-delay = 5000;
 # unredir-if-possible-exclude = [ ];
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
+# focus-exclude = [ "class_g = 'Cairo-clock'" ];
 detect-transient = true;
 detect-client-leader = true;
 invert-color-include = [ ];
@@ -77,12 +78,23 @@ invert-color-include = [ ];
 # glx-no-rebind-pixmap = true;
 # xrender-sync-fence = true;
 use-damage = true;
+# Sets the radius of rounded window corners. When > 0, the compositor will
+# round the corners of windows. Does not interact well with
+# `transparent-clipping`.
 
+corner-radius = 2
+
+rounded-corners-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'",
+  "class_g = 'Rofi'",
+];
 # Window type settings
 wintypes:
 {
   tooltip = { fade = true; shadow = false;};
-  menu = { shadow = true; fade = false; blur = false;};
+  notification = { fade = true; shadow = true;};
+  menu = { shadow = false; fade = false; blur = false;};
   dropdown_menu = { shadow = true; fade = false; blur = false;};
   popup_menu =  { shadow = true; fade = false; blur = false;};
 };
